Signature fix for Java5