@@ -78,7 +78,7 @@ public class GHContent {
      */
     @SuppressFBWarnings("DM_DEFAULT_ENCODING")
     public String getContent() throws IOException {
-        return new String(DatatypeConverter.parseBase64Binary(getEncodedContent()));
+        return new String(Base64.decodeBase64(getEncodedContent()));
     }
 
     /**
@@ -179,7 +179,7 @@ public class GHContent {
     }
 
     public GHContentUpdateResponse update(byte[] newContentBytes, String commitMessage, String branch) throws IOException {
-        String encodedContent = DatatypeConverter.printBase64Binary(newContentBytes);
+        String encodedContent = Base64.encodeBase64String(newContentBytes);
 
         Requester requester = new Requester(root)
             .with("path", path)
